Atualizar o ma.html

--- a/ma.html
+++ b/ma.html
@@ -89,7 +89,7 @@ body{
   align-self:flex-start;
 }
 .brand img{
-  width:48px;
+  width:54px;
   height:auto;
   filter: drop-shadow(0 10px 30px rgba(0,0,0,.22));
 }
@@ -173,7 +173,7 @@ body{
         </div>
 
         <div class="h1">
-          Se prepare para o PRÉ-LANÇAMENTO<br>
+          Se prepare para o <br>PRÉ-LANÇAMENTO<br>
           do Marketplace do<br>
           Mercado Agentes 🚀🤖
         </div>
