Atualizar o ma.html

--- a/ma.html
+++ b/ma.html
@@ -89,7 +89,7 @@ body{
   align-self:flex-start;
 }
 .brand img{
-  width:54px;
+  width:65px;
   height:auto;
   filter: drop-shadow(0 10px 30px rgba(0,0,0,.22));
 }
@@ -196,12 +196,12 @@ body{
 
         <div class="footer">
           E quem você acha que vai entrar primeiro?<br>
-          👉 Os VIPs. Os visionários. Quem está à frente do jogo. 💥
+          👉 Os VIPs. Os visionários. <br>Quem está à frente do jogo. 💥
         </div>
 
         <div class="cta">
           👀 Amanhã contaremos tudo como vai funcionar…<br>
-          Fica ligado porque isso aqui vai mudar o jogo 🚀🔥
+          Fica ligado porque isso aqui<br> vai mudar o jogo 🚀🔥
         </div>
 
       </div>
