--- a/aboutkael.html
+++ b/aboutkael.html
@@ -14,12 +14,10 @@
       --blue:#0E6BFF;
       --blue2:#2F8CFF;
       --cyan:#22D3EE;
-
-      --ink:#020617;
       --text:#F8FAFC;
-      --muted:rgba(248,250,252,.80);
-      --card:rgba(255,255,255,.06);
-      --stroke:rgba(255,255,255,.12);
+      --muted:rgba(248,250,252,.85);
+      --card:rgba(255,255,255,.07);
+      --stroke:rgba(255,255,255,.14);
     }
 
     *{box-sizing:border-box}
@@ -32,7 +30,6 @@
       font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif;
     }
 
-    /* STORY FRAME */
     .frame{
       width:1080px;
       height:1730px;
@@ -40,8 +37,8 @@
       overflow:hidden;
       border-radius:34px;
       background:
-        radial-gradient(920px 760px at 18% 16%, rgba(14,107,255,.32), transparent 62%),
-        radial-gradient(860px 740px at 88% 84%, rgba(47,140,255,.24), transparent 62%),
+        radial-gradient(920px 760px at 18% 16%, rgba(14,107,255,.34), transparent 62%),
+        radial-gradient(860px 740px at 88% 84%, rgba(47,140,255,.26), transparent 62%),
         linear-gradient(135deg, #000 0%, #040818 35%, #060e28 62%, #000 100%);
     }
 
@@ -50,9 +47,9 @@
       inset:-160px -300px auto -300px;
       height:620px;
       transform:rotate(-18deg);
-      background: radial-gradient(closest-side, rgba(14,107,255,.60), rgba(14,107,255,.08) 55%, transparent 78%);
+      background: radial-gradient(closest-side, rgba(14,107,255,.62), rgba(14,107,255,.10) 55%, transparent 78%);
       filter:blur(2px);
-      opacity:.9;
+      opacity:.95;
       pointer-events:none;
     }
 
@@ -61,8 +58,8 @@
       inset:auto -340px -300px -340px;
       height:760px;
       transform:rotate(12deg);
-      background: radial-gradient(closest-side, rgba(47,140,255,.45), rgba(47,140,255,.10) 56%, transparent 80%);
-      opacity:.85;
+      background: radial-gradient(closest-side, rgba(47,140,255,.48), rgba(47,140,255,.12) 56%, transparent 80%);
+      opacity:.9;
       pointer-events:none;
     }
 
@@ -80,39 +77,30 @@
     .wrap{
       position:absolute;
       inset:0;
-      padding:96px 90px 96px;
+      padding:80px 84px 84px;
       display:flex;
       flex-direction:column;
-      justify-content:flex-start;
-      gap:32px;
+      gap:36px;
     }
 
-    /* TOP (somente logo) */
-    .top{
-      display:flex;
-      align-items:center;
-      justify-content:flex-start;
-    }
-    .brand img{
-      width:54px; height:54px;
+    .top .brand img{
+      width:60px; height:60px;
       object-fit:contain;
-      filter:drop-shadow(0 12px 22px rgba(14,107,255,.25));
+      filter:drop-shadow(0 14px 26px rgba(14,107,255,.28));
     }
 
-    /* HERO (ocupando a tela) */
     .hero{
       flex:1;
       display:flex;
       flex-direction:column;
-      justify-content:flex-start;
-      gap:26px;
+      gap:30px;
     }
 
     .kicker{
       font-weight:800;
-      font-size:16px;
-      color:rgba(248,250,252,.72);
-      letter-spacing:.16em;
+      font-size:18px;
+      color:rgba(248,250,252,.75);
+      letter-spacing:.18em;
       text-transform:uppercase;
     }
 
@@ -120,12 +108,13 @@
       margin:0;
       font-family:Poppins,Inter,sans-serif;
       font-weight:800;
-      font-size:84px;
+      font-size:98px;      /* ↑ maior */
       line-height:1.02;
-      letter-spacing:-.05em;
+      letter-spacing:-.055em;
       color:var(--text);
-      max-width:980px;
+      max-width:1000px;
     }
+
     .grad{
       background:linear-gradient(90deg, var(--cyan), var(--blue2), var(--blue));
       -webkit-background-clip:text;
@@ -134,86 +123,84 @@
     }
 
     .sub{
-      font-size:22px;
-      line-height:1.6;
+      font-size:26px;      /* ↑ maior */
+      line-height:1.65;
       color:var(--muted);
-      max-width:920px;
+      max-width:980px;
     }
 
-    /* CARD MAIOR */
     .card{
-      margin-top:22px;
-      padding:30px 30px;
-      border-radius:26px;
+      margin-top:28px;
+      padding:38px 38px;   /* ↑ maior */
+      border-radius:28px;
       background:var(--card);
       border:1px solid var(--stroke);
-      box-shadow:0 30px 80px rgba(0,0,0,.55);
-      backdrop-filter: blur(10px);
-      max-width:100%;
+      box-shadow:0 36px 90px rgba(0,0,0,.6);
+      backdrop-filter: blur(12px);
+      width:100%;
     }
 
     .card h2{
-      margin:0 0 18px;
+      margin:0 0 22px;
       font-family:Poppins,Inter,sans-serif;
-      font-size:22px;
+      font-size:26px;     /* ↑ maior */
       letter-spacing:-.02em;
-      color:rgba(248,250,252,.95);
+      color:#fff;
     }
 
     .list{
       display:flex;
       flex-direction:column;
-      gap:18px;
+      gap:22px;
     }
 
     .row{
       display:flex;
       align-items:flex-start;
-      gap:14px;
-      padding:16px 16px;
-      border-radius:18px;
-      background:rgba(2,6,23,.35);
-      border:1px solid rgba(255,255,255,.08);
+      gap:18px;
+      padding:18px 20px;  /* ↑ maior */
+      border-radius:20px;
+      background:rgba(2,6,23,.40);
+      border:1px solid rgba(255,255,255,.10);
     }
 
     .toggle{
-      width:48px; height:28px;
+      width:56px; height:32px;
       border-radius:999px;
-      border:1px solid rgba(14,107,255,.22);
-      background:rgba(14,107,255,.10);
+      border:1px solid rgba(14,107,255,.26);
+      background:rgba(14,107,255,.12);
       position:relative;
       flex:0 0 auto;
-      margin-top:2px;
-      box-shadow:0 12px 28px rgba(0,0,0,.35);
+      margin-top:4px;
+      box-shadow:0 14px 34px rgba(0,0,0,.4);
     }
+
     .toggle:before{
       content:"";
       position:absolute;
-      top:50%; left:5px;
+      top:50%; left:6px;
       transform:translateY(-50%);
-      width:20px; height:20px;
+      width:22px; height:22px;
       border-radius:99px;
       background:linear-gradient(180deg, rgba(34,211,238,1), rgba(14,107,255,1));
-      box-shadow:0 0 16px rgba(14,107,255,.6);
+      box-shadow:0 0 20px rgba(14,107,255,.65);
     }
 
     .row p{
       margin:0;
-      font-size:18px;
-      line-height:1.4;
-      color:rgba(248,250,252,.88);
+      font-size:20px;     /* ↑ maior */
+      line-height:1.45;
+      color:rgba(248,250,252,.92);
     }
     .row p strong{ color:#fff }
 
     .micro{
-      margin-top:20px;
-      font-size:14px;
-      line-height:1.5;
-      color:rgba(248,250,252,.60);
+      margin-top:24px;
+      font-size:16px;     /* ↑ maior */
+      line-height:1.6;
+      color:rgba(248,250,252,.65);
     }
-    .micro b{ color:rgba(248,250,252,.9) }
 
-    /* RESPONSIVO (preview menor) */
     @media (max-width: 1100px){
       body{ padding:14px; }
       .frame{ transform: scale(calc((100vw - 28px) / 1080)); transform-origin: top center; }
@@ -229,14 +216,12 @@
 
     <div class="wrap">
 
-      <!-- TOPO: só logo -->
       <div class="top">
         <div class="brand">
           <img src="assets/img/apptullu.png" alt="Tullu Motion">
         </div>
       </div>
 
-      <!-- CONTEÚDO PRINCIPAL -->
       <div class="hero">
 
         <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
