Atualizar o aboutkael.html

--- a/aboutkael.html
+++ b/aboutkael.html
@@ -218,7 +218,7 @@
 
       <div class="top">
         <div class="brand">
-          <img src="assets/img/apptullu.png" alt="Tullu Motion">
+          <img src="assets/img/tullu.png" alt="Tullu Motion">
         </div>
       </div>
 
@@ -227,7 +227,7 @@
         <div class="kicker">Pra quem quer ganhar tempo e dinheiro</div>
 
         <h1>
-          Receba <span class="grad">toda semana</span><br>
+          Receba <br><span class="grad">toda semana</span><br>
           como usar IA no seu negócio.
         </h1>
 
